<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ARWorkflowBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainFragment">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        style="@style/ARWorkflowNavButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:backgroundTint="@drawable/button_selector"
        android:text="@string/back"
        android:textAllCaps="false"
        app:backgroundTint="@color/button_default_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAdjustTitle"
        style="@style/txtViewTitle"
        android:layout_marginStart="1dp"
        android:text="@string/end_of_this_experience"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="30dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHome"
        style="@style/ARWorkflowNavButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_selector"
        android:backgroundTint="@drawable/button_selector"
        android:text="@string/go_to_the_home_page"
        android:textAllCaps="false"
        app:backgroundTint="@color/button_default_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAdjustTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelectWorkflow"
        style="@style/ARWorkflowNavButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_selector"
        android:backgroundTint="@drawable/button_selector"
        android:text="@string/try_another_experience"
        android:textAllCaps="false"
        app:backgroundTint="@color/button_default_color"
        app:layout_constraintEnd_toEndOf="@+id/btnHome"
        app:layout_constraintStart_toStartOf="@+id/btnHome"
        app:layout_constraintTop_toBottomOf="@+id/btnHome" />


</androidx.constraintlayout.widget.ConstraintLayout>